Fixed popup close button on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -230,9 +230,6 @@ p {
   margin: 0.5rem;
   color: $violet;
   background: #f0f0f0;
-  position: fixed !important;
-  top: 1rem !important;
-  right: -13.75rem !important;
 
   &:hover {
     color: $violetLight;
